@startuml Bifrost
title Bifrost Operator

[*] --> Initializing

state Initializing {
    [*] --> InitializingContext

    InitializingContext: do / InitializeContext
    InitializingContext -[bold]-> LoadingSubject

    LoadingSubject: do / LoadSubject
    LoadingSubject --> SubjectDoesNotExist: [ IsError(K8s:NotFound) ]
    LoadingSubject: do / SetFlag(SubjectLoaded)
    LoadingSubject -[bold]-> [*]

    SubjectDoesNotExist : do / ClearError
    SubjectDoesNotExist --> [*]
}

Initializing --> [*] : error
Initializing --> [*] : [ MissingFlag(SubjectLoaded) ]
Initializing --> GeneratingAlloyComponents


state GeneratingAlloyComponents #PaleGreen
GeneratingAlloyComponents: do / SetWave(Alloy)
GeneratingAlloyComponents: do / GenerateAlloy
GeneratingAlloyComponents -[dotted]-> Closing: [ IsError ]
GeneratingAlloyComponents -[bold]-> SyncingWave

state GeneratingLokiComponents #PaleGreen
GeneratingLokiComponents: do / SetWave(Loki)
GeneratingLokiComponents: do / GenerateLoki
GeneratingLokiComponents -[dotted]-> Closing: [ IsError ]
GeneratingLokiComponents -[bold]-> SyncingWave

state GeneratingGrafanaComponents #PaleGreen
GeneratingGrafanaComponents: do / SetWave(Grafana)
GeneratingGrafanaComponents: do / GenerateGrafana
GeneratingGrafanaComponents -[dotted]-> Closing: [ IsError ]
GeneratingGrafanaComponents -[bold]-> SyncingWave


state SyncingWave {
    [*]--> InitializingWave

    InitializingWave: do / InitializeWave
    InitializingWave -[bold]-> IteratingComponents

    IteratingComponents -[bold]-> PickingNextComponent: [ MoreComponents ]
    IteratingComponents -[bold]-> [*]

    PickingNextComponent: do / PickNextComponent
    PickingNextComponent --> LoadingComponent

    LoadingComponent: do / LoadComponent
    LoadingComponent --> CreatingComponent: [ ComponentDoesNotExist ]
    LoadingComponent --> UpdatingComponent: [ ComponentDiffers ]
    LoadingComponent -[dotted]-> ComponentNotChanged

    ComponentNotChanged -[dotted]-> IteratingComponents

    CreatingComponent: do / CreateComponent
    CreatingComponent: do / SetFlag(NeedsReconcile)
    CreatingComponent -[bold]-> IteratingComponents

    UpdatingComponent: do / UpdateComponent
    UpdatingComponent: do / SetFlag(NeedsReconcile)
    UpdatingComponent: do / DoneWithComponent
    UpdatingComponent -[bold]-> IteratingComponents
   
}
SyncingWave --> GeneratingLokiComponents: [ WasWave(Alloy) ]
SyncingWave --> GeneratingGrafanaComponents: [ WasWave(Loki) ]
SyncingWave -[dotted]-> Closing: error
SyncingWave -[bold]-> EndingWave

EndingWave: do / SetWave(Done)
EndingWave -[bold]-> BuildingStatus


state BuildingStatus {
    [*] --> CollectingStatusInformation

    CollectingStatusInformation: do / CollectCommonStatusInformation
    CollectingStatusInformation: do / CollectStatusInformation
    CollectingStatusInformation --> EditMande: [ HasFlag(NeedsReconcile) ]
    CollectingStatusInformation --> ItemsNotReady: [ ObservedComponentsNotReady ]
    CollectingStatusInformation --> NotDone: [ WaveNotDone ]
    CollectingStatusInformation -[bold]-> AllComponentsDone

    EditMande: do / SetPhase(Pending/Updated)
    EditMande -[bold]-> [*]

    ItemsNotReady: do / SetPhase(Pending/ComponentNotHealthy)
    ItemsNotReady -[bold]-> [*]

    NotDone: do / SetPhase(Pending)
    NotDone -[bold]-> [*]

    AllComponentsDone: do / SetPhase(Ready)
    AllComponentsDone -[bold]-> [*]
}

BuildingStatus -[bold]-> Closing



state Closing {
    [*] --> ClosingInitial

    ClosingInitial --> HandlingError: [ IsError ]
    ClosingInitial --> ImmediateReconcile: [ HasFlag(NeedsReconcile) ]
    ClosingInitial -[bold]-> HandlingSuccess

    ImmediateReconcile: do / ReconcileIn(50ms)
    ImmediateReconcile -[bold]-> HandlingSuccess

    HandlingSuccess: do / ClearCondition(Failed)
    HandlingSuccess --> UpdatingStatus: [ Dirty ]
    HandlingSuccess -[bold]-> SendingEvent

    HandlingError: do / RaiseCondition(Failed)
    HandlingError: do / SetPhase(Error)
    HandlingError --> UpdatingStatus: [ Dirty ]
    HandlingError -[bold]-> SendingEvent

    UpdatingStatus: do / UpdateStatus
    UpdatingStatus --> ClearUnnecessaryErrors: error [ IsError(K8s:Conflict) ]
    UpdatingStatus -[bold]-> SendingEvent

    ClearUnnecessaryErrors: do / ClearError
    ClearUnnecessaryErrors -[bold]-> SendingEvent

    SendingEvent: do / SendEvent
    SendingEvent --> PlanDefaultReconcile: [ ReconcileNotPlanned ]
    SendingEvent -[bold]-> [*]

    PlanDefaultReconcile: do / ReconcileIn(5m)
    PlanDefaultReconcile -[bold]-> [*]
}

Closing -[bold]-> [*]


@enduml
